[package]
name = "solana-rpc-bench"
version = "0.1.0"
edition = "2024"
authors = ["onkel <me@onkel.dev>"]
license = "MIT"
description = "Benchmark Solana RPCs with real calls"
readme = "README.md"
homepage = "https://github.com/0xOnkel/solana-rpc-bench"
repository = "https://github.com/0xOnkel/solana-rpc-bench"
keywords = ["solana", "rpc", "cli"]

[dependencies]
config = "0.15.11"
dotenvy = "0.15.7"
serde = { version = "1.0.219", features = ["derive"] }
solana-client = "2.2.7"
solana-sdk = "2.2.2"
tabled = "0.18.0"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
